# autofaker

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  cheatsheet.ipynb  pyproject.toml  qodana.yml  requirements.txt  setup.py  sonar-project.properties  squad.config.ts
.github/: copilot-instructions.md
.squad/: decisions.md
.squad-templates/: squad.agent.md
docs/: README.md  cheatsheet.ipynb  pyautodata.ipynb  pyautodata_cheatsheet.ipynb  pypi.md
temp_backup/: Makefile  setup.py
tests/: test_attributes.py  test_base.py  test_bugfixes.py  test_collection_generator.py  test_create_anonymous_builtins.py  test_create_anonymous_classes.py  test_create_anonymous_complex_classes.py  test_create_anonymous_data_class_with_fakes.py  test_create_anonymous_data_classes.py  test_create_anonymous_data_classes_with_fakes.py  test_create_anonymous_dataclass_new_types.py  test_create_anonymous_dataframe.py  test_create_anonymous_dataframe_pandas.py  test_create_anonymous_dataframe_spark.py  test_create_anonymous_dataframe_with_fakes.py  test_create_anonymous_dates.py  test_create_anonymous_enum_classes.py  test_create_anonymous_lists.py  test_create_anonymous_literal.py  test_create_anonymous_nested_classes.py  test_create_anonymous_nested_classes_with_lists.py  test_create_anonymous_new_builtins.py  test_create_anonymous_primitives.py  test_create_anonymous_simple_classes.py  test_create_anonymous_sut.py  test_create_anonymous_time_types.py  test_create_anonymous_typing_generics.py  test_create_anonymouse_classes.py  test_create_anonymouse_primitives.py  (+18 more)
(+109 files in other folders)
